dataset1235/2025-2/805158916/users/3563627350/executions/2651470117_4233865845.log
== SUBMISSION (2025-08-25 14:29:50)
-- CODE: 
celsius = float(input())
fahrenheitn = celsius * (9 / 5) + 32
fahrenheitn_arredondado = round(fahrenheitn, 2)
print(fahrenheitn_arredondado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:29:07)
-- CODE: 
celsius = float(inut())
fahrenheitn = celsius * (9 / 5) + 32
fahrenheitn_arredondado = round(fahrenheitn, 2)
print(fahrenheitn_arredondado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:28:14)
-- CODE: 
celsius = float(inut())
fahrenheitn = celsius * (9 / 5) + 32
fahremheitn_arredondado = round(fahrenheitn, 2)
print(fahremheitn_arredondado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:29:05)
-- CODE: 
celsius = float(inut())
fahrenheitn = celsius * (9 / 5) + 32
fahrenheitn_arredondado = round(fahrenheitn, 2)
print(fahrenheitn_arredondado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:28:13)
-- CODE: 
celsius = float(inut())
fahrenheitn = celsius * (9 / 5) + 32
fahremheitn_arredondado = round(fahrenheitn, 2)
print(fahremheitn_arredondado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:28:26)
-- CODE: 
celsius = float(inut())
fahrenheitn = celsius * (9 / 5) + 32
fahremheitn_arredondado = round(fahrenheitn, 2)
print(fahrenheitn_arredondado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = float(inut())
                    ^^^^
NameError: name 'inut' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
